contracts/subscription_vault/test_output.txt
   Compiling subscription_vault v0.1.0 (C:\Users\ADMIN\Desktop\mide-drips\stellabill-contracts\contracts\subscription_vault)
error[E0599]: no method named `into_val` found for struct `soroban_sdk::Symbol` in the current scope
   --> contracts\subscription_vault\src\test.rs:843:40
    |
843 |         Symbol::new(&env, "deposited").into_val(&env)
    |                                        ^^^^^^^^
    |
   ::: C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-22.0.10\src\env.rs:90:8
    |
 90 |     fn into_val(&self, e: &E) -> T;
    |        -------- the method is available for `soroban_sdk::Symbol` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `to_val` with a similar name, but with different arguments
   --> C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-22.0.10\src\symbol.rs:276:5
    |
276 |     pub fn to_val(&self) -> Val {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `IntoVal` which provides `into_val` is implemented but not in scope; perhaps you want to import it
    |
  1 + use soroban_sdk::IntoVal;
    |

error[E0599]: no method named `into_val` found for type `u32` in the current scope
   --> contracts\subscription_vault\src\test.rs:847:12
    |
847 |         id.into_val(&env)
    |            ^^^^^^^^
    |
   ::: C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-22.0.10\src\env.rs:90:8
    |
 90 |     fn into_val(&self, e: &E) -> T;
    |        -------- the method is available for `u32` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `into` with a similar name, but with different arguments
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\convert\mod.rs:455:5
help: trait `IntoVal` which provides `into_val` is implemented but not in scope; perhaps you want to import it
    |
  1 + use soroban_sdk::IntoVal;
    |

error[E0599]: no method named `into_val` found for struct `soroban_sdk::Val` in the current scope
   --> contracts\subscription_vault\src\test.rs:851:66
    |
851 |     let event_data: crate::FundsDepositedEvent = deposit_event.2.into_val(&env);
    |                                                                  ^^^^^^^^
    |
   ::: C:\Users\ADMIN\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-22.0.10\src\env.rs:90:8
    |
 90 |     fn into_val(&self, e: &E) -> T;
    |        -------- the method is available for `soroban_sdk::Val` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `into` with a similar name, but with different arguments
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\convert\mod.rs:455:5
help: trait `IntoVal` which provides `into_val` is implemented but not in scope; perhaps you want to import it
    |
  1 + use soroban_sdk::IntoVal;
    |

warning: unused variable: `admin`
   --> contracts\subscription_vault\src\test.rs:555:26
    |
555 |     let (env, client, _, admin) = setup_test_env();
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_admin`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `token`
   --> contracts\subscription_vault\src\test.rs:896:23
    |
896 |     let (env, client, token, _) = setup_test_env();
    |                       ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`

warning: unused variable: `env`
   --> contracts\subscription_vault\src\test.rs:923:10
    |
923 |     let (env, client, _, admin) = setup_test_env();
    |          ^^^ help: if this is intentional, prefix it with an underscore: `_env`

warning: unused variable: `admin`
   --> contracts\subscription_vault\src\test.rs:952:26
    |
952 |     let (env, client, _, admin) = setup_test_env();
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_admin`

warning: unused variable: `env`
    --> contracts\subscription_vault\src\test.rs:1832:10
     |
1832 |     let (env, client, _, admin) = setup_test_env();
     |          ^^^ help: if this is intentional, prefix it with an underscore: `_env`

For more information about this error, try `rustc --explain E0599`.
warning: `subscription_vault` (lib test) generated 5 warnings
error: could not compile `subscription_vault` (lib test) due to 3 previous errors; 5 warnings emitted
